@startuml gui

skinparam classFontSize 12
skinparam classAttributeFontSize 11
skinparam ranksep 30
skinparam nodesep 25

title GUI elements: GUIElement hierarchy + Cloneable + Factory

abstract class GUIElement {
    +{abstract} draw(screen: Screen&): void
    +{abstract} clone(): GUIElement*
    +operator()(event: Event*): bool
    +\~GUIElement()
}

class "Cloneable<Derived>" <<CRTP>> {
    +clone(): GUIElement*
    +cloneDerived(): Derived*
}

note right of "Cloneable<Derived>"
  CRTP base. Derived classes inherit from
  Cloneable<Self> instead of GUIElement directly,
  picking up clone() / cloneDerived() automatically.
  cloneDerived() demonstrates covariant return.
  Free helper: cloneUnique<T>(const T&) -> unique_ptr<T>.
end note

class Point {
    +pos: vec2
    +color: vec3

    +Point()
    +Point(pos: vec2, color: vec3)
    +draw(screen: Screen&): void
}

class Line {
    +start: vec2
    +end: vec2
    +color: vec3

    +Line()
    +Line(start: vec2, end: vec2, color: vec3)
    +draw(screen: Screen&): void
}

class Box {
    +minPos: vec2
    +maxPos: vec2
    +color: vec3

    +Box()
    +Box(minPos: vec2, maxPos: vec2, color: vec3)
    +draw(screen: Screen&): void
}

class Label {
    -m_text: string
    -m_position: ivec2
    -m_color: vec3

    +Label(text: string, position: ivec2, color: vec3)
    +\~Label()
    +draw(screen: Screen&): void
    +getText(): string
}

class Selection {
    -m_position: ivec2
    -m_label: string
    -m_isSelected: bool
    -{static} m_boxSize: int

    +Selection(position: ivec2, label: string, checked: bool)
    +\~Selection()
    +draw(screen: Screen&): void
    +toggle(): void
    +isSelected(): bool
}

class Image {
    -m_filePath: string
    -m_position: ivec2

    +Image(filePath: string, position: ivec2)
    +\~Image()
    +draw(screen: Screen&): void
    +getFilePath(): string
}

class Button {
    -minPos: ivec2
    -maxPos: ivec2
    -color: vec3
    -soundFile: string
    -targetLayout: string
    -targetLayoutHide: string

    +Button(minP: ivec2, maxP: ivec2, col: vec3, soundFile: string, targetLayout: string, targetLayoutHide: string)
    +\~Button()
    +draw(screen: Screen&): void
    +checkToggle(mouseX: int, mouseY: int): bool
    +operator()(event: Event*): bool
}

class Bar {
    -minPos: ivec2
    -maxPos: ivec2
    -fillColor: vec3
    -bgColor: vec3
    -value: float
    -minVal: float
    -maxVal: float
    -metricName: string

    +Bar(minPos, maxPos, fillColor, bgColor, minVal, maxVal, metricName)
    +setValue(v: float): void
    +getValue(): float
    +getMetricName(): string
    +draw(screen: Screen&): void
}

class Row {
    -minPos: ivec2
    -maxPos: ivec2
    -cells: vector<string>
    -columnWeights: vector<float>
    -textColor: vec3

    +Row(minPos, maxPos, cells, columnWeights, textColor)
    +setCells(cells: vector<string>): void
    +getCells(): vector<string>
    +draw(screen: Screen&): void
}

enum GUIElementType {
    POINT
    LINE
    BOX
    BAR
    ROW
    LABEL
    BUTTON
}

class GUIElementFactory {
    +{static} createPoint(pos: vec2, color: vec3): unique_ptr<GUIElement>
    +{static} createLine(start: vec2, end: vec2, color: vec3): unique_ptr<GUIElement>
    +{static} createBox(minPos: vec2, maxPos: vec2, color: vec3): unique_ptr<GUIElement>
    +{static} createBar(minPos, maxPos, fillColor, bgColor, minVal, maxVal, metricName): unique_ptr<GUIElement>
    +{static} createRow(minPos, maxPos, cells, columnWeights, textColor): unique_ptr<GUIElement>
    +{static} createLabel(text, pos, color): unique_ptr<GUIElement>
    +{static} createButton(minPos, maxPos, color, soundFile, targetLayout, targetLayoutHide): unique_ptr<GUIElement>
    +{static} create(type: GUIElementType, pos1: vec2, pos2: vec2, color: vec3): unique_ptr<GUIElement>
}

GUIElement <|-- "Cloneable<Derived>"
"Cloneable<Derived>" <|-- Point
"Cloneable<Derived>" <|-- Line
"Cloneable<Derived>" <|-- Box
"Cloneable<Derived>" <|-- Label
"Cloneable<Derived>" <|-- Selection
"Cloneable<Derived>" <|-- Image
"Cloneable<Derived>" <|-- Button
"Cloneable<Derived>" <|-- Bar
"Cloneable<Derived>" <|-- Row
"Cloneable<Derived>" <|-- Sparkline
"Cloneable<Derived>" <|-- ProgressRing
"Cloneable<Derived>" <|-- Gauge
"Cloneable<Derived>" <|-- Donut
"Cloneable<Derived>" <|-- Heatmap
"Cloneable<Derived>" <|-- StackedBar
"Cloneable<Derived>" <|-- Toggle
"Cloneable<Derived>" <|-- Slider
"Cloneable<Derived>" <|-- TabStrip
"Cloneable<Derived>" <|-- Dropdown
"Cloneable<Derived>" <|-- TreeView
"Cloneable<Derived>" <|-- Modal
"Cloneable<Derived>" <|-- Tooltip

note as v03widgets
  v0.3-era widgets:
  ProgressRing, Gauge, Donut, Heatmap, StackedBar,
  Toggle, Slider, TabStrip, Dropdown, TreeView,
  Modal, Tooltip. Each owns a draw(Screen&) and
  uses Cloneable<Self> for polymorphic clone.
end note

Point -[hidden]-> Line
Line -[hidden]-> Box
Box -[hidden]-> Label
Label -[hidden]-> Selection
Selection -[hidden]-> Image
Image -[hidden]-> Button
Button -[hidden]-> Bar
Bar -[hidden]-> Row

GUIElementFactory ..> GUIElement : creates
GUIElementFactory ..> GUIElementType : uses

@enduml
